--- a/todo.org
+++ b/todo.org
@@ -1,23 +1,31 @@
-* Lab2 [25%]
+* Lab2 [33%]
   DEADLINE: <2018-02-14 Wed>
-  1. [0%] implement dynamic views (add content)
-     * [ ] CheckoutView
-     * [ ] ResultView
-     * [ ] SearchView
-     * [ ] ReciepeView
-     * [ ] SideView
-     * [ ] DishView
+  1. [25%] implement dynamic views (add content)
+     - [ ] CheckoutView
+     - [X] ResultView
+     - [ ] SearchView
+       + [ ] Implelent search and filter
+     - [ ] ReciepeView
+     - [ ] SideView
+       + [ ] Add dishes from menu
+       + [ ] Change number of guests
+     - [ ] DishView
+     - [X] IndexView
+     - [ ] SubBannerView
   2. [X] Add observers to model
      * [X] this.addObserver
      * [X] notifyOobservers
   3. [ ] this.upadate for all views
-  4. [ ] controller for all views
-     * [X] Checkout
-     * [ ] Recipe
-     * [X] Result
-     * [X] Dish
-     * [X] Side
-     * [ ] Search
+  4. [25%] controller for all views
+     - [ ] Checkout
+     - [ ] Recipe
+     - [X] Result
+     - [ ] Dish
+     - [ ] Side
+     - [ ] Search
+     - [X] Index
+     - [ ] SubBanner
   5. [ ] add plus/minus btn for numberOfGuests
+
 
 
