--- a/todo.org
+++ b/todo.org
@@ -1,22 +1,29 @@
-* Lab2 [33%]
+* Lab2 [50%]
   DEADLINE: <2018-02-14 Wed>
-  1. [25%] implement dynamic views (add content)
+  1. [62%] implement dynamic views (add content)
      - [ ] CheckoutView
      - [X] ResultView
      - [ ] SearchView
        + [ ] Implelent search and filter
-     - [ ] ReciepeView
+     - [X] ReciepeView
      - [ ] SideView
        + [ ] Add dishes from menu
        + [ ] Change number of guests
-     - [ ] DishView
+     - [X] DishView
      - [X] IndexView
-     - [ ] SubBannerView
+     - [X] SubBannerView
   2. [X] Add observers to model
      * [X] this.addObserver
      * [X] notifyOobservers
-  3. [ ] this.upadate for all views
-  4. [25%] controller for all views
+  3. [14%] this.upadate for all views
+     - [ ] Checkout
+     - [ ] Recipe (No listeners exist)
+     - [ ] Result
+     - [X] Dish
+     - [ ] Side
+     - [ ] Search
+     - [ ] SubBanner
+  4. [37%] controller for all views
      - [X] Checkout
      - [ ] Recipe (No listeners exist)
      - [X] Result
