--- a/todo.org
+++ b/todo.org
@@ -35,14 +35,14 @@
 
 
 
-* Lab3 [%]
-** Get data [%]
-   [ ] Update getAllDishes and getDish
-   [ ] Asynchronous callbacks instead of returns. Callback on success, else error.
-   [ ] modify code where we call getAllDishses and getDish to work with new callbacks
+* Lab3 [0%]
+** Get data [0%]
+   - [ ] Update getAllDishes and getDish
+   - [ ] Asynchronous callbacks instead of returns. Callback on success, else error.
+   - [ ] modify code where we call getAllDishses and getDish to work with new callbacks
 
-** Good interaction
-   [ ] Inform user about errors in data retrieval
-   [ ] Display loading indicator when gathering data from api
-   [ ] When error occur, display message
-   [ ] Remove limit of 3 dishes (starterm, main, dessert)
+** Good interaction [0%]
+ - [ ] Inform user about errors in data retrieval
+ - [ ] Display loading indicator when gathering data from api
+ - [ ] When error occur, display message
+ - [ ] Remove limit of 3 dishes (starterm, main, dessert)
