--- a/todo.org
+++ b/todo.org
@@ -36,15 +36,14 @@
 
 
 * Lab3 [0%]
-** Get data [66%]
+** Get data [50%]
    - [X] Update getAllDishes and getDish
    - [ ] Asynchronous callbacks instead of returns. Callback on success, else error.
    - [X] modify code where we call getAllDishses and getDish to work with new callbacks
+   - [ ] get more objects than the first 10 from search
 
-** Good interaction [16%]
- - [ ] Inform user about errors in data retrieval
- - [ ] Display loading indicator when gathering data from api
- - [ ] When error occur, display message
+** Good interaction [33%]
+ - [X] Display loading indicator when gathering data from api
  - [X] Remove limit of 3 dishes (starterm, main, dessert)
  - [ ] Fix css on checkoutview
  - [ ] Add function for remove dishes
